<resources>
    <string name="app_name">Serveasy - Garage</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_garage_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_services">Services</string>
    <string name="menu_pending">Pending</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="save_procees"><![CDATA[Save & Procees]]></string>
    <string name="proceed">Proceed</string>


    <string-array name="car_service_array">
        <item>Service</item>
        <item>Oil Change</item>
        <item>Air Filter Replacement</item>
        <item>New Tyre</item>
        <item>Battery Replacement</item>
        <item>Brake Servicing</item>
        <item>Engine Tune-Up</item>
        <item>Wheel Alignment</item>
        <item>Car Wash</item>
    </string-array>


    <string-array name="bike_service_array">
        <item>Oil Change</item>
        <item>Clutch Wire Replacement</item>
        <item>New Tyre</item>
        <item>Battery Replacement</item>
        <item>Engine Tune-Up</item>
        <item>Wheel Alignment</item>
        <item>Shock-Up Repair</item>
        <item>Bike Wash</item>
    </string-array>


</resources>

