<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.serveasy_garage.ui.dashboard.DashboardFragment"

        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.serveasy_garage.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.serveasy_garage.ui.services.ServicesFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_pending" />

    <fragment
        android:id="@+id/nav_pending"
        android:name="com.example.serveasy_garage.ui.pending.PendingFragment"
        android:label="@string/menu_pending"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.serveasy_garage.ui.profile.ProfileFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_vehicle"
        android:name="com.example.serveasy_garage.ui.vehicle.VehicleFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_vehicle" />
    <!-- <fragment
         android:id="@+id/nav_logout"
         android:label="Logout"
         tools:layout="@layout/activity_login" />-->
    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.serveasy_garage.LoginActivity"
        android:label="Logout"
        tools:layout="@layout/activity_login" />
</navigation>